<?xml version="1.0" encoding="utf-8"?>
<resources>

<<<<<<< HEAD
    <string name="app_name">Twenty One Seconds</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="observe">Observe</string>
    <string name="embrace">Embrace</string>
    <string name="demand_more">Demand More</string>
    <string name="Trust">Trust</string>
	<string name="logo_des">Panic Away Logo</string>
	<string name="startBtn">Start Now</string>
	<string name="seconds">21 Seconds</string>
	
=======
    <string name="app_name">PanicAway</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="productsPic">productsPic</string>
    <string name="loginMembers">Members Area Login</string>
    <string name="loginButton">loginButton</string>
    <string name="forumLogin">Forum Login</string>
    <string name="seven">7 Minute Exercise</string>
    <string name="twentyOne">21 Second Technique</string>
    

>>>>>>> 6dd259f8274355c2623c550e4c2888928def2233
</resources>
