<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:contentDescription="logo"
        android:src="@drawable/logo" />
     <Button
         android:id="@+id/start"
         style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:minWidth="160dip"
         android:textColor="#ff0000"
         android:text="@string/startBtn" />
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/observeBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:minWidth="250dp"
            android:text="@string/observe"
             android:textColor="#137abc"
            android:textSize="30sp" />
        
          <Button
              android:id="@+id/embraceeBtn"
              android:layout_width="284dp"
              android:layout_height="wrap_content"
              android:minHeight="60dip"
              android:minWidth="250dp"
              android:textSize="30sp"
              android:textColor="#137abc"
              android:text="@string/embrace" />

        <Button
            android:id="@+id/demandBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="60dip"
            android:textSize="30sp"
            android:minWidth="250dp"
            android:textColor="#137abc"
            android:text="@string/demand_more" />
        
           <Button
               android:id="@+id/trustBtn"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:minHeight="60dip"
               android:textSize="30sp"
               android:minWidth="250dp"
               android:textColor="#137abc"
               android:text="@string/Trust" />

     <TextView
         android:id="@+id/timer"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding="10dip"
         android:textSize="40sp" />
    
   </LinearLayout>

</RelativeLayout>